misc resin bug fixes
git-svn-id: svn://svn.caucho.com/resin/trunk@3351 9c94448d-38f1-0310-a231-d98308ff1ebf